--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
 
 body {
     background-color: #716f8a;
-		display: flex;
-		flex-direction: column;
-		margin: 0;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	color: white;
+	font-family: 'Roboto', sans-serif;
 }
 
 nav {
@@ -67,9 +69,52 @@ form h2 {
 	border-bottom: 3px solid #ccc;
 }
 
+.form-container#plugin-form {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	background-color: #3f3e54;
+	padding: 0;
+}
+
+.form-container#plugin-form button {
+	grid-column: 1 / 3;
+	width: 300px;
+	margin: auto;
+	margin-bottom: 20px;
+}
+
+.content {
+	text-align: center;
+}
+
+.content h1 {
+	font-size: 98px;
+}
+
 form#new-variable-form {
 	max-height: fit-content;
 }
+
+form#plugin-info-form {
+	width: fit-content;
+	max-width: 80%;
+}
+
+.plugin-checkboxes {
+	display: flex;
+	flex-direction: row;
+}
+
+section.plugin-section {
+	margin: 0 20px;
+}
+
+h3 {
+	margin: 0;
+	margin-bottom: 10px;
+	border-bottom: 1px solid white;
+}
+
 
 .input-container {
 	display: flex;
@@ -79,9 +124,9 @@ form#new-variable-form {
 
 form input, form select {
 	font-family: 'Roboto', sans-serif;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  font-size: larger;
+	margin-bottom: 10px;
+	border: 1px solid #ccc;
+	font-size: larger;
 }
 
 button {
@@ -122,10 +167,10 @@ form .error {
 
 .preview {
 	max-height: 800px;
-  border: 3px solid #ccc;
-  background-color: #3f3e54;
-  color: rgb(226, 241, 255);
-  padding: 10px;
+	border: 3px solid #ccc;
+	background-color: #3f3e54;
+	color: rgb(226, 241, 255);
+	padding: 10px;
 	margin: 10px 30px;
-  font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto Mono', monospace;
 }
